Chapter06/init_terraform/terraform-codes/vpc.tf
resource "aws_vpc" "default-vpc" {
  assign_generated_ipv6_cidr_block     = "false"
  cidr_block                           = "172.31.0.0/16"
  enable_classiclink                   = "false"
  enable_classiclink_dns_support       = "false"
  enable_dns_hostnames                 = "true"
  enable_dns_support                   = "true"
  enable_network_address_usage_metrics = "false"
  instance_tenancy                     = "default"

  tags = {
    Name = "default-vpc"
  }

  tags_all = {
    Name = "default-vpc"
  }
}
